--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,10 @@ aliases:
   - &start_frontend
     run:
       name: Start App
-      command: yarn develop
+      command: |
+        npm run clean
+        npm run dev
+        npm run watch:js:server
       when: always
       background: true
 
@@ -57,23 +60,6 @@ aliases:
     BACKEND_USER: x
     NODE_ENV: development
     TZ: Europe/London
-
-  - &find_exporters_e2e_envs
-    FRONTEND_URL: http://localhost:8080
-    BACKEND_URL: https://dt07-staging.london.cloudapps.digital
-    LOG_LEVEL: debug
-    SSO_BYPASS: true
-    SESSION_SECRET: x
-    SSO_DOMAIN: x
-    SSO_CLIENT: x
-    SSO_SECRET: x
-    SSO_PATH_AUTH: x
-    SSO_PATH_TOKEN: x
-    SSO_PATH_INTROSPECT: x
-    SSO_REDIRECT_URI: x
-    BACKEND_KEY: x
-    BACKEND_USER: prospects
-    IS_REMOTE: false
 
 jobs:
   dependencies:
@@ -144,26 +130,6 @@ jobs:
       - store_artifacts:
           path: cypress/screenshots
 
-  end_to_end_test:
-    docker:
-      - <<: *docker_data_hub_base
-        environment: *find_exporters_e2e_envs
-      - *docker_redis
-    working_directory: ~/data-science-frontend
-    steps:
-      - checkout
-      - *store_versions
-      - *restore_npm_cache
-      - run:
-          name: App dependencies
-          command: npm install
-      - *start_frontend
-      - *wait_for_frontend
-      - run:
-          name: Webdriverio tests
-          command: npm run test:e2e
-          when: always
-
   visual_test:
     docker:
       - <<: *docker_data_hub_base
@@ -205,9 +171,6 @@ workflows:
           requires:
             - lint_test
             - unit_test
-      - end_to_end_test:
-          requires:
-            - functional_test
       - visual_test:
           requires:
             - functional_test
