--- a/package.json
+++ b/package.json
@@ -121,7 +121,6 @@
     "connect-redis": "3.3.3",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
-    "data-hub-components": "^0.17.1",
     "date-fns": "^1.29.0",
     "dateformat": "3.0.3",
     "del-cli": "^1.1.0",
@@ -132,6 +131,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "get-form-data": "^2.0.0",
     "govuk-frontend": "^1.3.0",
+    "govuk-react": "0.7.0",
     "hawk": "7.0.7",
     "history": "^4.7.2",
     "html5shiv": "^3.7.3",
@@ -141,14 +141,17 @@
     "lodash": ">=4.17.13",
     "morgan": ">=1.9.1",
     "nunjucks": "^3.1.3",
+    "pluralise": "^1.0.1",
     "postcss-loader": "^3.0.0",
     "qs": "^6.5.2",
     "raven": "^2.6.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "4.0.8",
     "redis": "2.8.0",
     "request": "^2.88.0",
     "resolve-url-loader": "^3.1.0",
+    "styled-components": "4.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "uuid": "^3.3.2",
     "webpack": "^3.12.0",
