Remove visual tests from config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,6 +171,6 @@ workflows:
           requires:
             - lint_test
             - unit_test
-      - visual_test:
-          requires:
-            - functional_test
+      #- visual_test:
+      #    requires:
+      #      - functional_test
