--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "clean": "del src/app/public/dist",
     "preversion": "npm run lint && npm test",
     "postversion": "git push && git push --tags",
@@ -163,11 +164,10 @@
   "resolutions": {
     "tar": "^4.4.8",
     "fstream": ">=1.0.12",
-    "handlebars": ">=4.0.14",
-    "js-yaml": ">=3.13.1",
-    "lodash": ">=4.17.13",
+    "js-yaml": "^3.13.1",
     "mem": ">=4.0.0",
     "shelljs": ">=0.8.3",
-    "underscore.string": ">=3.3.5"
+    "underscore.string": ">=3.3.5",
+    "xmlhttprequest-ssl": ">=1.6.2"
   }
 }
