--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "shelljs": ">=0.8.3",
     "underscore.string": ">=3.3.5",
     "xmlhttprequest-ssl": ">=1.6.2",
-    "glob-parent": "5.1.2"
+    "glob-parent": "5.1.2",
+    "trim-newlines": "3.0.1"
   }
 }
