--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "underscore.string": ">=3.3.5",
     "xmlhttprequest-ssl": ">=1.6.2",
     "glob-parent": "5.1.2",
-    "trim-newlines": "3.0.1"
+    "trim-newlines": "3.0.1",
+    "is-svg": "4.2.2"
   }
 }
