--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "xmlhttprequest-ssl": ">=1.6.2",
     "glob-parent": "5.1.2",
     "trim-newlines": "3.0.1",
-    "is-svg": "4.2.2"
+    "is-svg": "4.2.2",
+    "merge": "2.1.1"
   }
 }
