--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "glob-parent": "5.1.2",
     "trim-newlines": "3.0.1",
     "is-svg": "4.2.2",
-    "merge": "2.1.1"
+    "merge": "2.1.1",
+    "serialize-javascript": "3.1.0"
   }
 }
