--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "trim-newlines": "3.0.1",
     "is-svg": "4.2.2",
     "merge": "2.1.1",
-    "serialize-javascript": "3.1.0"
+    "serialize-javascript": "3.1.0",
+    "ssri": "6.0.2"
   }
 }
