--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "react-markdown": "5.0.0",
     "redis": "3.1.1",
     "request": "^2.88.0",
-    "resolve-url-loader": "^3.1.0",
+    "resolve-url-loader": "4.0.0",
     "styled-components": "4.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "uuid": "^3.3.2",
