--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "is-svg": "4.2.2",
     "merge": "2.1.1",
     "serialize-javascript": "3.1.0",
-    "ssri": "6.0.2"
+    "ssri": "6.0.2",
+    "y18n": "4.0.1"
   }
 }
