--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "merge": "2.1.1",
     "serialize-javascript": "3.1.0",
     "ssri": "6.0.2",
-    "y18n": "4.0.1"
+    "y18n": "4.0.1",
+    "ini": "1.3.6"
   }
 }
