--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Data Hub Find Exporters",
   "main": "server.js",
   "engines": {
-    "node": "10.16.0"
+    "node": "14.7.0"
   },
   "jest": {
     "moduleNameMapper": {
@@ -61,25 +61,25 @@
   "devDependencies": {
     "@uktrade/client-matrix-js": "^1.0.38",
     "@uktrade/wdio-image-diff-js": "^1.8.0",
-    "@wdio/browserstack-service": "^6.1.4",
-    "@wdio/cli": "6.1.4",
-    "@wdio/local-runner": "^6.1.4",
-    "@wdio/mocha-framework": "^6.1.8",
+    "@wdio/browserstack-service": "^6.12.1",
+    "@wdio/cli": "^6.12.1",
+    "@wdio/local-runner": "^7.0.0",
+    "@wdio/mocha-framework": "^7.9.0",
     "@wdio/selenium-standalone-service": "^5.16.10",
-    "@wdio/spec-reporter": "^6.1.23",
-    "@wdio/sync": "6.1.5",
+    "@wdio/spec-reporter": "^7.3.1",
+    "@wdio/sync": "^7.7.7",
     "browser-sync": "2.27.5",
     "browser-sync-webpack-plugin": "^2.2.2",
-    "browserstack-local": "^1.4.0",
-    "chromedriver": "^74.0.0",
+    "browserstack-local": "^1.4.8",
+    "chromedriver": "^92.0.0",
     "cypress": "^3.4.1",
     "dotenv": "^6.0.0",
-    "eslint": "^5.16.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^4.2.0",
     "jasmine": "3.0.0",
@@ -91,73 +91,72 @@
     "mocha-multi": "^1.0.1",
     "mocha-webpack": "^1.1.0",
     "mockdate": "2.0.2",
-    "nock": "^10.0.6",
-    "node-sass": "^4.13.1",
-    "nodemon": "^1.18.4",
+    "nock": "^13.1.1",
+    "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "proxyquire": "1.8.0",
     "react-app-polyfill": "^1.0.2",
-    "sass-lint": "^1.13.1",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.21.0",
     "supertest": "^3.3.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.5.5",
     "@uktrade/datahub-header": "^1.4.3",
     "array-from": "^2.1.1",
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^9.8.6",
     "axios": ">=0.21.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.0.0-beta.6",
+    "babel-loader": "^8.2.2",
     "compression": "1.7.2",
-    "connect-redis": "3.3.3",
+    "connect-redis": "^6.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.0",
-    "date-fns": "^1.29.0",
+    "css-loader": "^5.2.7",
+    "date-fns": "^2.23.0",
     "dateformat": "3.0.3",
-    "del-cli": "^1.1.0",
-    "element-closest": "^2.0.2",
+    "del-cli": "^4.0.1",
+    "element-closest": "^3.0.2",
     "es6-promise": "^4.2.5",
-    "express": "4.16.3",
-    "express-session": "1.15.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "get-form-data": "^2.0.0",
-    "govuk-frontend": "^1.3.0",
-    "govuk-react": "0.7.0",
+    "express": "^4.16.2",
+    "express-session": "1.17.2",
+    "get-form-data": "^3.0.0",
+    "govuk-frontend": "^2.11.0",
+    "govuk-react": "^0.7.0",
     "hawk": "7.0.7",
-    "history": "^4.7.2",
+    "history": "^4.10.1",
     "html5shiv": "^3.7.3",
     "image-webpack-loader": "^5.0.0",
     "istanbul-api": "^2.1.6",
     "js-yaml": "^3.13.1",
     "lodash": ">=4.17.21",
-    "morgan": ">=1.9.1",
-    "nunjucks": "^3.1.3",
+    "mini-css-extract-plugin": "^1.6.2",
+    "morgan": ">=1.10.0",
+    "nunjucks": "^3.2.3",
     "pluralise": "^1.0.1",
-    "postcss-loader": "^3.0.0",
-    "qs": "^6.5.2",
+    "postcss-loader": "^4.1.0",
+    "qs": "^6.10.1",
     "raven": "^2.6.4",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-markdown": "5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^5.0.3",
     "redis": "3.1.1",
     "request": "^2.88.0",
-    "resolve-url-loader": "4.0.0",
-    "styled-components": "4.2.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^10.0.4",
+    "styled-components": "5.3.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "uuid": "^3.3.2",
-    "webpack": "^3.12.0",
-    "webpack-assets-manifest": "^1.0.0",
+    "uuid": "^8.3.2",
+    "webpack": "^4.46.0",
+    "webpack-assets-manifest": "^4.0.6",
     "webpack-merge": "^4.1.1",
-    "winston": "2.4.2"
+    "winston": "^3.3.3"
   },
   "sasslintConfig": ".sass-lint.yml",
   "resolutions": {
